src/styles/App.sass
@use 'util' as *
@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap')

$font:  'Bai Jamjuree', sans-serif

.App
    display: grid
    padding: 1.75rem
    font-family: $font
    color: $grayish_blue
    text-align: center
    background: url('src/assets/images/bg-header-mobile.png') no-repeat
    background-size: 100%

    section
        display: grid
        justify-content: center
        gap: 1.5rem
        padding: 3rem 0 5rem

    img
        justify-self: center
        padding: 2rem 0

    h1
        color: $dark_grayish_blue
        font-size: 1.75rem
        font-weight: 600
        line-height: 1.25

    h2
        @extend h1
        font-size: 1.75rem

    h3
        @extend h1
        font-size: 1.5rem

    p
        font-size: 1rem
        line-height: 1.75

.Features

    img
        width: 100%

    .Icon
        width: 3.125rem

.Features__Snippets
    margin: 0 0 8rem
    
    h3
        margin: 1rem 0 0.5rem

    p
        margin: 0 0 3rem

.Download
    
    h1
        font-size: 1.75rem

.Footer
    display: grid
    background: lighten($light_blue, 29%)
    justify-items: center
    text-align: center
    gap: 3rem
    font-family: inherit
    padding: 4rem 0 3rem

    img
        width: 3rem

    ul
        display: grid
        gap: 2rem
        font-family: $font
        color: $dark_grayish_blue

.Socials
    display: grid
    grid-auto-flow: column
    gap: 2rem
    
    img
        width: 1.5rem


// tablet and desktop displays (landscape)
@include width(1440)
    .App
        background: url('src/assets/images/bg-header-desktop.png') no-repeat
        background-size: 100%
        padding: 0 8rem

        section
            align-content: center
            justify-items: center
            min-height: 100vh
            grid-auto-rows: min-content

        h1
            font-size: 2.75rem
            line-height: 1

        p
            max-width: 45rem
            font-size: 1.25rem

        .Features
            padding: 6rem 0

            p
                max-width: 50rem

        .Features__Snippets
            display: grid
            grid-template-columns: auto 1fr
            align-items: center
            text-align: left
            margin-top: 2rem 

            img
                position: relative
                left: -10rem

            .Features__Group
                display: grid
                grid-column: 2
                gap: 1rem
                position: relative
                left: -2rem

                h3
                    font-size: 1.5rem

                p
                    font-size: 1rem

        .Features__Tools
            display: grid
            grid-template-columns: repeat(3, minmax(0, 1fr))
            gap: 2rem
            margin: 2rem 0

            .Feature
                display: grid
                align-content: baseline
                gap: 1rem

                h3
                    font-size: 1.5rem

                p
                    font-size: 0.9rem

        .Brands
            grid-auto-flow: column
            justify-content: space-evenly
            align-items: center
            min-height: fit-content
            padding: 0
            gap: 5rem

            img
                padding: 0

        .Downloads
            grid-auto-flow: row
            min-height: fit-content
            margin: 10rem 0 5rem
            padding: 0
            
            h2
                font-size: 2rem
            p
                font-size: 1rem
                padding: 0 2.5rem

    .Footer
        grid-auto-flow: column
        align-items: center
        padding: 2rem 4rem

        &>img
            width: 4rem

        ul
            grid-template-rows: repeat(2, 1fr)
            column-gap: 5rem
            row-gap: 1.25rem
            grid-auto-flow: column
            text-align: left
            justify-self: start

@include width(1920)
    .App
        .Features__Snippets
            display: grid
            grid-template-columns: auto 480px
            align-items: center
            text-align: left
            margin-top: 2rem 
            gap: 5rem

            img
                left: 0rem

            .Features__Group 
                left: 0rem 

        .Features
            img
                max-width: 64rem

